--- a/404.html
+++ b/404.html
@@ -36,71 +36,71 @@
               <div>
                 <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd7-5d35ddd5" class="nav__container">
                   <div href="#" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd8-5d35ddd5" class="nav__logo-wrap logo--tablet">
-                    <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="Nords Oy logo" class="nav__logo-embed"></a>
+                    <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="Nords Oy logo" class="nav__logo-embed"></a>
                   </div>
                   <nav role="navigation" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dddb-5d35ddd5" class="nav__menu-wrap w-nav-menu">
                     <div href="#" class="nav__logo-wrap">
-                      <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="Nords Oy logo" class="nav__logo-embed"></a>
+                      <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="Nords Oy logo" class="nav__logo-embed"></a>
                     </div>
                     <div class="nav__menu menu--desktop">
-                      <a href="index.html" class="nav-link w-inline-block">
+                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi.html" class="nav-link w-inline-block">
+                      <a href="tiimi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto.html" class="nav-link w-inline-block">
+                      <a href="hinnasto" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot.html" class="nav-link w-inline-block">
+                      <a href="tyot" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta.html" class="nav-link w-inline-block">
+                      <a href="ota-yhteytta" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
                       </a>
                     </div>
                     <div class="nav__menu menu--tablet">
-                      <a href="index.html" class="nav-link w-inline-block">
+                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi.html" class="nav-link w-inline-block">
+                      <a href="tiimi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto.html" class="nav-link w-inline-block">
+                      <a href="hinnasto" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot.html" class="nav-link w-inline-block">
+                      <a href="tyot" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta.html" class="nav-link w-inline-block">
+                      <a href="ota-yhteytta" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
@@ -108,7 +108,7 @@
                     </div>
                   </nav>
                   <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dec2-5d35ddd5" class="nav__btn">
-                    <a href="ota-yhteytta.html" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
+                    <a href="ota-yhteytta" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
                       <div class="btn__label-wrap btn--overlay">
                         <div class="btn__label btn--overlay">Ota yhteyttä</div>
                         <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
@@ -149,7 +149,7 @@
                         </div>
                       </div>
                       <div id="w-node-_667ad72d-fcc0-32d8-3277-a3be5e8f39bd-5e8f39b3" class="hero__btn align-center">
-                        <a href="index.html" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
+                        <a href="https://www.nords.fi" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
                           <div class="btn__label-wrap btn--secondary">
                             <div class="btn__label btn--secondary">Go to home page</div>
                             <div class="btn__label--hidden btn--secondary">Go to home page</div>
@@ -246,13 +246,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="index.html">Home 01</a>
+                    <a href="https://www.nords.fi">Home 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-02.html">Home 02</a>
+                    <a href="home/home-02">Home 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-03.html">Home 03</a>
+                    <a href="home/home-03">Home 03</a>
                   </div>
                 </div>
               </div>
@@ -269,13 +269,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="product/product-01.html">Product 01</a>
+                    <a href="product/product-01">Product 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-02.html">Product 02</a>
+                    <a href="product/product-02">Product 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-03.html">Product 03</a>
+                    <a href="product/product-03">Product 03</a>
                   </div>
                 </div>
               </div>
@@ -292,13 +292,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="contact/contact-01.html">Contact 01</a>
+                    <a href="contact/contact-01">Contact 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="contact/contact-02.html">Contact 02</a>
+                    <a href="contact/contact-02">Contact 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="ota-yhteytta.html">Contact 03</a>
+                    <a href="ota-yhteytta">Contact 03</a>
                   </div>
                 </div>
               </div>
@@ -315,19 +315,19 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="hinnasto.html">Pricing</a>
+                    <a href="hinnasto">Pricing</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tiimi.html">Company</a>
+                    <a href="tiimi">Company</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tyot.html">Career</a>
+                    <a href="tyot">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/demo.html">Demo</a>
+                    <a href="company/demo">Demo</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/coming-soon.html">Coming Soon</a>
+                    <a href="company/coming-soon">Coming Soon</a>
                   </div>
                 </div>
               </div>
@@ -373,13 +373,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="resource/resources.html">Resources</a>
+                    <a href="resource/resources">Resources</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/guide.html">Guide</a>
+                    <a href="resource/guide">Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/blog.html">Blog</a>
+                    <a href="resource/blog">Blog</a>
                   </div>
                 </div>
               </div>
@@ -396,13 +396,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="palveluehdot.html">Terms &amp; Conditions</a>
+                    <a href="palveluehdot">Terms &amp; Conditions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tietosuojaseloste.html">Privacy Policy</a>
+                    <a href="tietosuojaseloste">Privacy Policy</a>
                   </div>
                   <div class="modal__link">
-                    <a href="legal/cookie-policy.html">Cookie Policy</a>
+                    <a href="legal/cookie-policy">Cookie Policy</a>
                   </div>
                 </div>
               </div>
@@ -419,13 +419,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="auth/sign-in.html">Sign In</a>
+                    <a href="auth/sign-in">Sign In</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/sign-up.html">Sign Up</a>
+                    <a href="auth/sign-up">Sign Up</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/password-reset.html">Password Reset</a>
+                    <a href="auth/password-reset">Password Reset</a>
                   </div>
                 </div>
               </div>
@@ -442,13 +442,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="search.html">Search</a>
+                    <a href="search">Search</a>
                   </div>
                   <div class="modal__link">
-                    <a href="401.html">Login</a>
+                    <a href="401">Login</a>
                   </div>
                   <div class="modal__link">
-                    <a href="404.html" aria-current="page" class="w--current">Not Found</a>
+                    <a href="404" aria-current="page" class="w--current">Not Found</a>
                   </div>
                 </div>
               </div>
@@ -465,16 +465,16 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="documentation/instructions.html">Instructions</a>
+                    <a href="documentation/instructions">Instructions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/style-guide.html">Style Guide</a>
+                    <a href="documentation/style-guide">Style Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/licenses.html">Licenses</a>
+                    <a href="documentation/licenses">Licenses</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/changelog.html">Changelog</a>
+                    <a href="documentation/changelog">Changelog</a>
                   </div>
                 </div>
               </div>
@@ -522,7 +522,7 @@
                   </div>
                 </div>
                 <div class="cta__btn btn--gap-lg">
-                  <a href="contact/contact-01.html" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
+                  <a href="contact/contact-01" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
                     <div class="btn__label-wrap">
                       <div class="btn__label">Ota yhteyttä</div>
                       <div class="btn__label--hidden">Ota yhteyttä</div>
@@ -552,7 +552,7 @@
                   </div>
                 </div>
                 <div class="cta__btn btn--gap-lg">
-                  <a href="company/demo.html" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
+                  <a href="company/demo" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
                     <div class="btn__label-wrap btn--secondary">
                       <div class="btn__label btn--secondary">Tutustu toimintaamme</div>
                       <div class="btn__label--hidden btn--secondary">Tutustu toimintaamme</div>
@@ -585,7 +585,7 @@
                   <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a1a1-12c5a19d" class="footer__brand">
                     <div class="footer__about">
                       <div href="#" aria-label="brand logo" class="footer__logo-link">
-                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="index.html" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="Nords Oy logo valkoinen" class="logo__embed"></a>
+                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="https://www.nords.fi" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="Nords Oy logo valkoinen" class="logo__embed"></a>
                       </div>
                       <div class="footer__tagline">
                         <p>Me teemme sivut, jotka tukevat kasvua.</p>
@@ -608,22 +608,22 @@
                       </div>
                       <div class="footer__links">
                         <div class="footer__link">
-                          <a href="index.html">Koti</a>
+                          <a href="https://www.nords.fi">Koti</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tiimi.html">Tiimi</a>
+                          <a href="tiimi">Tiimi</a>
                         </div>
                         <div class="footer__link">
-                          <a href="hinnasto.html">Hinnasto</a>
+                          <a href="hinnasto">Hinnasto</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tyot.html">Työt</a>
+                          <a href="tyot">Työt</a>
                         </div>
                         <div class="footer__link">
-                          <a href="asiakaspalautteet.html">Asiakaspalautteet</a>
+                          <a href="asiakaspalautteet">Asiakaspalautteet</a>
                         </div>
                         <div class="footer__link">
-                          <a href="ota-yhteytta.html">Ota yhteyttä</a>
+                          <a href="ota-yhteytta">Ota yhteyttä</a>
                         </div>
                       </div>
                     </div>
@@ -657,10 +657,10 @@
                     </div>
                     <div class="footer__legal">
                       <div class="footer__link link--legal">
-                        <a href="tietosuojaseloste.html">Tietosuojaseloste</a>
+                        <a href="tietosuojaseloste">Tietosuojaseloste</a>
                       </div>
                       <div class="footer__link link--legal">
-                        <a href="palveluehdot.html">Palveluehdot</a>
+                        <a href="palveluehdot">Palveluehdot</a>
                       </div>
                     </div>
                   </div>
