--- a/kysely.html
+++ b/kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 12:16:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 13:55:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69411fb0954c65393233845d" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -214,13 +214,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="resource/resources">Resources</a>
+                    <a href="#">Resources</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/guide">Guide</a>
+                    <a href="#">Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/blog">Blog</a>
+                    <a href="#">Blog</a>
                   </div>
                 </div>
               </div>
@@ -243,7 +243,7 @@
                     <a href="tietosuojaseloste">Privacy Policy</a>
                   </div>
                   <div class="modal__link">
-                    <a href="legal/cookie-policy">Cookie Policy</a>
+                    <a href="#">Cookie Policy</a>
                   </div>
                 </div>
               </div>
