--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 13:55:57 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79271" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -249,10 +249,10 @@
                     <a href="https://www.nords.fi">Home 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-02">Home 02</a>
+                    <a href="#">Home 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-03">Home 03</a>
+                    <a href="#">Home 03</a>
                   </div>
                 </div>
               </div>
@@ -269,13 +269,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="product/product-01">Product 01</a>
+                    <a href="#">Product 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-02">Product 02</a>
+                    <a href="#">Product 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-03">Product 03</a>
+                    <a href="#">Product 03</a>
                   </div>
                 </div>
               </div>
@@ -292,10 +292,10 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="contact/contact-01">Contact 01</a>
+                    <a href="#">Contact 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="contact/contact-02">Contact 02</a>
+                    <a href="#">Contact 02</a>
                   </div>
                   <div class="modal__link">
                     <a href="ota-yhteytta">Contact 03</a>
@@ -324,10 +324,10 @@
                     <a href="tyot">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/demo">Demo</a>
+                    <a href="company/palvelusivu">Demo</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/coming-soon">Coming Soon</a>
+                    <a href="#">Coming Soon</a>
                   </div>
                 </div>
               </div>
@@ -419,13 +419,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="auth/sign-in">Sign In</a>
+                    <a href="#">Sign In</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/sign-up">Sign Up</a>
+                    <a href="#">Sign Up</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/password-reset">Password Reset</a>
+                    <a href="#">Password Reset</a>
                   </div>
                 </div>
               </div>
@@ -465,16 +465,16 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="documentation/instructions">Instructions</a>
+                    <a href="#">Instructions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/style-guide">Style Guide</a>
+                    <a href="#">Style Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/licenses">Licenses</a>
+                    <a href="#">Licenses</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/changelog">Changelog</a>
+                    <a href="#">Changelog</a>
                   </div>
                 </div>
               </div>
@@ -522,7 +522,7 @@
                   </div>
                 </div>
                 <div class="cta__btn btn--gap-lg">
-                  <a href="contact/contact-01" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
+                  <a href="#" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
                     <div class="btn__label-wrap">
                       <div class="btn__label">Ota yhteyttä</div>
                       <div class="btn__label--hidden">Ota yhteyttä</div>
@@ -552,7 +552,7 @@
                   </div>
                 </div>
                 <div class="cta__btn btn--gap-lg">
-                  <a href="company/demo" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
+                  <a href="company/palvelusivu" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
                     <div class="btn__label-wrap btn--secondary">
                       <div class="btn__label btn--secondary">Tutustu toimintaamme</div>
                       <div class="btn__label--hidden btn--secondary">Tutustu toimintaamme</div>
