--- a/tiimi.html
+++ b/tiimi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 13:55:57 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d7" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -223,7 +223,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="(max-width: 767px) 100vw, 504px" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
@@ -243,7 +243,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, 504px" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
