--- a/kysely.html
+++ b/kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 13:55:57 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69411fb0954c65393233845d" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -90,10 +90,10 @@
                     <a href="https://www.nords.fi">Home 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-02">Home 02</a>
+                    <a href="#">Home 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-03">Home 03</a>
+                    <a href="#">Home 03</a>
                   </div>
                 </div>
               </div>
@@ -110,13 +110,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="product/product-01">Product 01</a>
+                    <a href="#">Product 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-02">Product 02</a>
+                    <a href="#">Product 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-03">Product 03</a>
+                    <a href="#">Product 03</a>
                   </div>
                 </div>
               </div>
@@ -133,10 +133,10 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="contact/contact-01">Contact 01</a>
+                    <a href="#">Contact 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="contact/contact-02">Contact 02</a>
+                    <a href="#">Contact 02</a>
                   </div>
                   <div class="modal__link">
                     <a href="ota-yhteytta">Contact 03</a>
@@ -165,10 +165,10 @@
                     <a href="tyot">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/demo">Demo</a>
+                    <a href="company/palvelusivu">Demo</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/coming-soon">Coming Soon</a>
+                    <a href="#">Coming Soon</a>
                   </div>
                 </div>
               </div>
@@ -260,13 +260,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="auth/sign-in">Sign In</a>
+                    <a href="#">Sign In</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/sign-up">Sign Up</a>
+                    <a href="#">Sign Up</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/password-reset">Password Reset</a>
+                    <a href="#">Password Reset</a>
                   </div>
                 </div>
               </div>
@@ -306,16 +306,16 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="documentation/instructions">Instructions</a>
+                    <a href="#">Instructions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/style-guide">Style Guide</a>
+                    <a href="#">Style Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/licenses">Licenses</a>
+                    <a href="#">Licenses</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/changelog">Changelog</a>
+                    <a href="#">Changelog</a>
                   </div>
                 </div>
               </div>
